<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CL_dialogBoxBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#313132">

    <LinearLayout
        android:layout_width="0dp"
...
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/TV_bearing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0"
        android:textColor="#313132"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="@+id/TV_distance" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/deg_t"
        android:textColor="#FF5722"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_divergence"
        app:layout_constraintStart_toEndOf="@+id/TV_divergence" />

    <TextView
        android:id="@+id/TV_divergence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/TV_searchAreaSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="0"
        android:textColor="#313132"
        android:textSize="18sp"
...
