...
    <string name="enter_distance">Please enter a distance in Nautical Miles.</string>
    <string name="enter_time">Please enter a time in hours.
(Must be decimals of hours e.g. 1.5 hours = 1 hour 30 minutes.)</string>
    <string name="please_enter_a_wind_speed">Please enter a wind speed</string>
    <string name="please_enter_a_wind_direction">Please enter a wind direction</string>
    <string name="no_drift_object_found">"No drift object found matching that criteria. Please check your selections are correct."</string>
    <string name="calculate_drift_vector">Calculate Drift Vector</string>
    <string name="wind">Wind:</string>
    <string name="category">Category:</string>
    <string name="sub_category">Sub-Category:</string>
    <string name="description">Description:</string>
    <string name="secondary_description">Secondary Description:</string>
    <string name="total_drift_Vector">Total Drift Vector</string>
...
